--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <title>UdyogWorks - Business Development Agency | Design, Technology & Education</title>
     <meta name="title" content="UdyogWorks - Business Development Agency | Design, Technology & Education" />
     <meta name="description" content="Transform your business with UdyogWorks. Expert services in web development, data analytics, digital marketing, and business consulting. Get started today!" />
-    <meta name="keywords" content="business development, web development, data analytics, digital marketing, business consulting, UdyogWorks, agency, design, technology, education" />
+    <meta name="keywords" content="business development, web development agencies, digital solutions, digital marketing agency, business consulting, UdyogWorks, top web agencies, design, technology, education" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="author" content="UdyogWorks" />
